[gd_scene load_steps=29 format=2]

[ext_resource path="res://assests/slime spritesheet calciumtrice.png" type="Texture" id=1]
[ext_resource path="res://enemies/blueSlime_bck.gd" type="Script" id=2]
[ext_resource path="res://assests/ui/healthbar/VIDA_0.png" type="Texture" id=3]
[ext_resource path="res://assests/ui/healthbar/VIDA_10.png" type="Texture" id=4]


[sub_resource type="CapsuleShape2D" id=1]
radius = 7.41662
height = 5.22629

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 224, 32, 32 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "walking",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=23]
radius = 7.15156
height = 7.61042

[sub_resource type="CircleShape2D" id=24]
radius = 78.6196

[node name="Node2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="takeDamageRange" type="Area2D" parent="." groups=[
"enemy",
"slime",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="takeDamageRange"]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 22 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.187286, 7.67882 )
shape = SubResource( 23 )

[node name="visionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="visionRange"]
position = Vector2( -0.445465, 8.0181 )
shape = SubResource( 24 )

[node name="healthBar" type="TextureProgress" parent="."]
margin_left = -10.1131
margin_top = -5.3587
margin_right = 367.887
margin_bottom = 34.6413
rect_scale = Vector2( 0.0556537, 0.0866251 )
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="visionRange" to="." method="_on_attack_ranged_entered"]
[connection signal="area_exited" from="visionRange" to="." method="_on_attack_range_exited"]
